@@ -33,9 +33,9 @@
 #define	USED
 #endif
 #ifdef	PTIME
-static const char sccsid[] USED = "@(#)ptime.sl	1.28 (gritter) 5/29/05";
+static const char sccsid[] USED = "@(#)ptime.sl	1.29 (gritter) 12/19/08";
 #else
-static const char sccsid[] USED = "@(#)time.sl	1.28 (gritter) 5/29/05";
+static const char sccsid[] USED = "@(#)time.sl	1.29 (gritter) 12/19/08";
 #endif
 
 #include	<sys/types.h>
@@ -52,6 +52,7 @@ static const char sccsid[] USED = "@(#)time.sl	1.28 (gritter) 5/29/05";
 #include	<ctype.h>
 #ifdef	PTIME
 #include	<limits.h>
+#include	<setjmp.h>
 #endif
 #include	<locale.h>
 
@@ -303,6 +304,18 @@ child(char **av)
 	_exit(err == ENOENT ? 0177 : 0176);
 }
 
+#ifdef PTIME
+sigjmp_buf	jmpbuf;
+
+/*
+ * SIGCHLD signal handler.
+ */
+void onchld(int signo)
+{
+	siglongjmp(jmpbuf, 1);
+}
+#endif
+
 /*
  * Time a command.
  */
@@ -322,6 +335,10 @@ timecmd(char **av)
 
 	oldint = sigset(SIGINT, SIG_IGN);
 	oldquit = sigset(SIGQUIT, SIG_IGN);
+#ifdef PTIME
+	sigset(SIGCHLD, onchld);
+	sighold(SIGCHLD);
+#endif
 	t1 = times(&tp);
 	switch (pid = fork()) {
 	case 0:
@@ -334,25 +351,24 @@ timecmd(char **av)
 		return 1;
 	}
 #ifdef	PTIME
-	/*
-	 * Changing to the child's /proc entry will keep it in zombie status
-	 * even after it has been waited for.
-	 */
 	snprintf(pdir, sizeof pdir, "/proc/%lu", (long)pid);
 	if (chdir(pdir) < 0) {
 		pnerror(errno, pdir);
 		return 1;
 	}
-	/*
-	 * Starting with Linux 2.4.5, the stat file has to be opened to
-	 * make it persistent.
-	 */
 	if ((fp = fopen(stfn, "r")) == NULL) {
 		pnerror(errno, stfn);
 		return 1;
 	}
+	if (sigsetjmp(jmpbuf, 0) == 0) {
+		sigrelse(SIGCHLD);
+		pause();
+	}
+	write(0, 0, 0);
+	if (ptimes(&tp, fp, stfn) < 0)
+		return 1;
 #endif
-	while (wait(&status) != pid);
+	while (waitpid(pid, &status, 0) != pid);
 	t2 = times(&tp);
 	sigset(SIGINT, oldint);
 	sigset(SIGQUIT, oldquit);
@@ -361,10 +377,6 @@ timecmd(char **av)
 				progname);
 	else
 		fprintf(stderr, "\n");
-#ifdef	PTIME
-	if (ptimes(&tp, fp, stfn) < 0)
-		return 1;
-#endif
 	out("real", t2 - t1);
 	out("user", tp.tms_cutime);
 	out("sys", tp.tms_cstime);
