@@ -4,6 +4,7 @@ Release ...
 * mknod, pgrep, ps: Mac OS X Leopard compilation fixes.
 * w, whodo: On a 32-bit system where /proc/kcore is larger than 2 GB,
   avoid a harmless error message (bug reported by Pierre Gentile).
+* ptime: Works on recent Linux kernels again.
 
 Release 070715
 * cpio: A "-P" option has been introduced that allows to specify attributes
